<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.financial_tracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_addOperationFragment"
            app:destination="@+id/add_operation_fragment"
        />
    </fragment>

    <fragment
        android:id="@+id/add_operation_fragment"
        android:name="com.example.financial_tracker.ui.addOperation.AddOperationFragment"
        android:label="@string/menu_add_operation"
        tools:layout="@layout/fragment_add_operation" />

    <fragment
        android:id="@+id/nav_chart"
        android:name="com.example.financial_tracker.ui.chart.ChartFragment"
        android:label="@string/menu_chart"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.financial_tracker.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_create_new_category"
            app:destination="@+id/create_new_category" />
        <action
            android:id="@+id/action_delete_category"
            app:destination="@+id/delete_new_category" />

    </fragment>

    <fragment
        android:id="@+id/create_new_category"
        android:name="com.example.financial_tracker.ui.addCategory.AddCategoryFragment"
        android:label="@string/menu_create_category"
        tools:layout="@layout/fragment_add_category" />

    <fragment
        android:id="@+id/delete_category"
        android:name="com.example.financial_tracker.ui.deleteCategory.DeleteCategoryFragment"
        android:label="@string/delete_category"
        tools:layout="@layout/fragment_delete_category" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.financial_tracker.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>